--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPFgKG63Bmo1lbZ7z7peBdM",
+      "authorship_tag": "ABX9TyN34ROsrql2jWEuNfvvDbZg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2160,12 +2160,13 @@
         "#Cluster sampling\n",
         "\n",
         "#Generating 10 cluster\n",
-        "len(dataset) // 10\n",
+        "len(dataset) // 10 # = 3256\n",
         "\n",
         "#Creating the clusters\n",
         "clusters = []\n",
         "id_cluster = 0\n",
         "counter = 0\n",
+        "#assigning samples to clusters\n",
         "for _ in dataset.iterrows():\n",
         "  clusters.append(id_cluster)\n",
         "  counter += 1\n",
@@ -2180,9 +2181,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AaQQlCZfYXKK",
-        "outputId": "54690b1d-7352-4eb1-acec-11ee4772b0ec"
+        "outputId": "5f5a0706-2e6e-44b7-8ec4-e7136b602e7a"
       },
-      "execution_count": 22,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2193,7 +2194,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 44
         }
       ]
     },
@@ -2898,10 +2899,57 @@
     {
       "cell_type": "code",
       "source": [
+        "#Stratified sampling\n",
+        "from sklearn.model_selection import StratifiedShuffleSplit\n",
+        "\n",
+        "#Knowing the groups to separate\n",
+        "dataset['income'].value_counts() #<= 50k 24720 / >50k 7841\n",
+        "\n",
+        "#Knowing how much \">50k\" takes from the data set\n",
+        "7841 / len(dataset) #0.24...\n",
+        "\n",
+        "#Knowing how much \"<= 50k\" takes from the data set\n",
+        "24720 / len(dataset) #0.759...\n",
+        "\n",
+        "#splitting in 10% \n",
+        "split = StratifiedShuffleSplit(test_size=0.1)\n",
+        "\n",
+        "#Splitting and separating the data set\n",
+        "for x, y in split.split(dataset, dataset['income']):\n",
+        "  df_x = dataset.iloc[x]\n",
+        "  df_y = dataset.iloc[y]\n",
+        "\n",
+        "df_x.shape #29304, 16 (90%)\n",
+        "df_y.shape #3257, 16 (10%)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TXboocTSgsBL",
+        "outputId": "6060e1c2-0fb0-4642-d5aa-95849f3f4247"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3257, 16)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "TXboocTSgsBL"
+        "id": "gF4pQfdnseMJ"
       },
       "execution_count": null,
       "outputs": []
