--- a/Cópia_de_Fundamentals.ipynb
+++ b/Cópia_de_Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP9inuhsSK5/nMtyb4gpzp1",
+      "authorship_tag": "ABX9TyO/WySk2hH5ew67STUp9dp9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2928,9 +2928,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TXboocTSgsBL",
-        "outputId": "2af8e1d1-c5a7-4e9a-9556-155b055839cf"
+        "outputId": "0af02de8-9155-48fe-a883-5ee61922f7e2"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2940,7 +2940,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -2955,9 +2955,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f9bc690-f0d0-49d1-bf1e-42cd2866620b"
+        "outputId": "28d632ea-2282-43e0-81fa-2e20fcca4e45"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2969,7 +2969,72 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reservoir sampling\n",
+        "\n",
+        "#Creating a exemple of stream\n",
+        "stream = []\n",
+        "\n",
+        "for i in range(len(dataset)):\n",
+        "  stream.append(i)\n",
+        "\n",
+        "#Creating a function\n",
+        "def reservoir_sampling(dataset, sample):\n",
+        "  stream = []\n",
+        "  for i in range(len(dataset)):\n",
+        "    stream.append(i)\n",
+        "  \n",
+        "  i = 0\n",
+        "  size = len(dataset)\n",
+        "\n",
+        "  reservoir = [0] * sample\n",
+        "  for i in range(sample):\n",
+        "    reservoir[i] = stream[i]\n",
+        "  \n",
+        "  while i < size:\n",
+        "    j = random.randrange( i + 1)\n",
+        "    if j < sample:\n",
+        "      reservoir[j] = stream[i]\n",
+        "    i += 1\n",
+        "\n",
+        "  return dataset.iloc[reservoir]"
+      ],
+      "metadata": {
+        "id": "Mng2jzh5w4gT"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_test_reservoir = reservoir_sampling(dataset, 100)\n",
+        "df_test_reservoir.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GluHblukzLuV",
+        "outputId": "26c8135a-de08-402e-ed4b-7c4150396030"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(100, 15)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     },
