Tomek links (undersampling)

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNDqfaNulKZrt4MWZ/MwaIO",
+      "authorship_tag": "ABX9TyOI0CElv8CqSP0XgJTiMWI2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3128,6 +3128,39 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Tomek links (undersampling)\n",
+        "from imblearn.under_sampling import TomekLinks\n",
+        "\n",
+        "tl = TomekLinks(return_indices=True, ratio='majority')\n",
+        "\n",
+        "X_under, y_under, id_under = tl.fit_sample(X,y)\n",
+        "\n",
+        "np.unique(y, return_counts=True)\n",
+        "np.unique(y_under, return_counts= True)\n",
+        "\n",
+        "X_train_u, X_test_u, y_train_u, y_test_u = train_test_split(X_under, \n",
+        "                                                            y_under, \n",
+        "                                                            test_size= 0.2, \n",
+        "                                                            stratify = y_under)\n",
+        "X_train_u.shape #1517\n",
+        "X_test_u.shape #380\n",
+        "\n",
+        "model_u = GaussianNB()\n",
+        "model_u.fit(X_train_u, y_train_u)\n",
+        "predicts_u = model_u.predict(X_test_u)\n",
+        "accuracy_score(predicts_u, y_test_u)\n",
+        "\n",
+        "cm_u = confusion_matrix(predicts_u, y_test_u)"
+      ],
+      "metadata": {
+        "id": "MqnFGkcaLBnA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
