Mean, mode, median of frequency

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPyjSSgf2Q6UtNYMDIBVseU",
+      "authorship_tag": "ABX9TyOk2GPXRa5mj9efoVnowzs9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3105,7 +3105,7 @@
         "id": "SwQ4JYglqnbw",
         "outputId": "82526773-d827-44a4-8a99-06d508218d8d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3292,9 +3292,9 @@
           "height": 279
         },
         "id": "bM04XoMa4zHa",
-        "outputId": "beded2f0-7914-4008-c61b-1eb820411d33"
+        "outputId": "3a062c78-beaa-442b-fbdf-b992030760b0"
       },
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3327,7 +3327,7 @@
         "id": "OSikqIHZOkP9",
         "outputId": "d758a77c-67bd-44d1-b8ad-bca495dca940"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3356,7 +3356,7 @@
         "id": "LHPl5fpsRHuW",
         "outputId": "6cf7b583-2546-49fc-a41e-74abeaf76597"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3414,7 +3414,7 @@
         "id": "qjPRtE_xWsl-",
         "outputId": "2f5b3b15-752c-410c-90ac-4100728ee026"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3425,6 +3425,78 @@
           },
           "metadata": {},
           "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Mean, mode, median of Frequency\n",
+        "import pandas as pd\n",
+        "\n",
+        "data = {'Lower': [150, 154, 158, 162, 166, 170],\n",
+        "        'Upper': [154, 158, 162, 166, 170, 174],\n",
+        "        'fi': [5, 9, 11, 7, 5, 3]}\n",
+        "\n",
+        "dataset = pd.DataFrame(data)\n",
+        "\n",
+        "dataset['xi'] = (dataset['Upper'] + dataset['Lower']) / 2\n",
+        "\n",
+        "dataset['fi.xi'] = dataset['fi'] * dataset['xi']\n",
+        "dataset\n",
+        "\n",
+        "frequency_accumulated = []\n",
+        "sum = 0\n",
+        "\n",
+        "for line in dataset.iterrows():\n",
+        "  sum += line[1][2]\n",
+        "  frequency_accumulated.append(sum)\n",
+        "\n",
+        "dataset['Fi'] = frequency_accumulated\n",
+        "dataset\n",
+        "\n",
+        "#Mean\n",
+        "dataset['fi.xi'].sum() / dataset['fi'].sum(0)\n",
+        "\n",
+        "#Mode\n",
+        "dataset[dataset['fi'] == dataset['fi'].max()]['xi'].values[0]\n",
+        "\n",
+        "#Median\n",
+        "fi_2 = dataset['fi'].sum() / 2\n",
+        "\n",
+        "lower_limit, frequency_class, id_frequency_before = 0, 0, 0\n",
+        "for line in dataset.iterrows():\n",
+        "  lower_limit = line[1][0]\n",
+        "  frequency_class = line[1][2]\n",
+        "  id_frequency_before = line[0]\n",
+        "  if line[1][5] >= fi_2:\n",
+        "    id_frequency_before -= 1\n",
+        "    break\n",
+        "\n",
+        "\n",
+        "Fi_before = dataset.iloc[[id_frequency_before]]['Fi'].values[0]\n",
+        "\n",
+        "median = lower_limit + ((fi_2 - Fi_before) * 4) / frequency_class\n",
+        "median"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nWFw3_F1euCE",
+        "outputId": "66c72976-c41e-49aa-dab1-3b2a0aa44373"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "160.1818181818182"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     }
