Function for mean, mode, median for frequency

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOk2GPXRa5mj9efoVnowzs9",
+      "authorship_tag": "ABX9TyOs/RSfL1N4e+ZSApKbsGAD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3477,26 +3477,48 @@
         "Fi_before = dataset.iloc[[id_frequency_before]]['Fi'].values[0]\n",
         "\n",
         "median = lower_limit + ((fi_2 - Fi_before) * 4) / frequency_class\n",
-        "median"
+        "median\n",
+        "\n",
+        "#Function to get mean, mode, median of frequency\n",
+        "def get_statics(dataframe):\n",
+        "  mean = dataframe['fi.xi'].sum() / dataframe['fi'].sum(0)\n",
+        "  mode = dataset[dataset['fi'] == dataset['fi'].max()]['xi'].values[0]\n",
+        "\n",
+        "  fi_2 = dataframe['fi'].sum() / 2\n",
+        "\n",
+        "  lower_limit, frequency_class, id_frequency_before = 0, 0, 0\n",
+        "  for i, line in enumerate(dataframe.iterrows()):\n",
+        "    lower_limit = line[1][0]\n",
+        "    frequency_class = line[1][2]\n",
+        "    id_frequency_before = line[0]\n",
+        "    if line[1][5] >= fi_2:\n",
+        "      id_frequency_before -= 1\n",
+        "      break\n",
+        "  Fi_before = dataframe.iloc[[id_frequency_before]]['Fi'].values[0]\n",
+        "  median = lower_limit + ((fi_2 - Fi_before) * 4) / frequency_class\n",
+        "\n",
+        "  return mean, mode, median\n",
+        "\n",
+        "get_statics(dataset)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nWFw3_F1euCE",
-        "outputId": "66c72976-c41e-49aa-dab1-3b2a0aa44373"
+        "outputId": "3349f14d-c73f-4943-ea34-ec280b54b9df"
       },
-      "execution_count": 14,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "160.1818181818182"
+              "(160.7, 160.0, 160.1818181818182)"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 24
         }
       ]
     }
