--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOs/RSfL1N4e+ZSApKbsGAD",
+      "authorship_tag": "ABX9TyMEIqvDnCT2+7t2PiwfmT9v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3521,6 +3521,46 @@
           "execution_count": 24
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Geometric mean\n",
+        "from scipy.stats.mstats import gmean\n",
+        "\n",
+        "gmean(dataArray)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qS4jSYXi3KQt",
+        "outputId": "9457130a-3bab-4a16-cb45-068c71f658bb"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "160.26958390038905"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "5-qiPasG4jNO"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
