--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMEIqvDnCT2+7t2PiwfmT9v",
+      "authorship_tag": "ABX9TyMlqzYGZUdn+78arMzkcvk6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3554,10 +3554,39 @@
     {
       "cell_type": "code",
       "source": [
+        "#Harmonic mean\n",
+        "from scipy.stats.mstats import hmean\n",
+        "\n",
+        "hmean(dataArray)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5-qiPasG4jNO",
+        "outputId": "b93f3d3e-6630-406c-f0d5-16b32556b7cc"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "160.16471947994674"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "5-qiPasG4jNO"
+        "id": "tGK5QIv95Qla"
       },
       "execution_count": null,
       "outputs": []
