--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMlqzYGZUdn+78arMzkcvk6",
+      "authorship_tag": "ABX9TyP4VfsA8HSb7a1QNGQLLG0P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3564,9 +3564,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5-qiPasG4jNO",
-        "outputId": "b93f3d3e-6630-406c-f0d5-16b32556b7cc"
+        "outputId": "67acc6f7-8fdc-4a61-bda0-8dcc29efa175"
       },
-      "execution_count": 27,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3576,20 +3576,47 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 37
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#Square mean\n",
+        "def square_mean(dados):\n",
+        "  return math.sqrt(np.sum(n * n for n in dados) / len(dados))\n",
+        "\n",
+        "square_mean(dataArray)"
       ],
       "metadata": {
-        "id": "tGK5QIv95Qla"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tGK5QIv95Qla",
+        "outputId": "d9ab523c-e5c3-403c-8445-bd84b543f2d3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:3: DeprecationWarning: Calling np.sum(generator) is deprecated, and in the future will give a different result. Use np.sum(np.fromiter(generator)) or the python sum builtin instead.\n",
+            "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "160.48091786876097"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
     }
   ]
 }
