--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP4VfsA8HSb7a1QNGQLLG0P",
+      "authorship_tag": "ABX9TyPjaLr3ycBq3SCnuV4SAd/h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3294,7 +3294,7 @@
         "id": "bM04XoMa4zHa",
         "outputId": "3a062c78-beaa-442b-fbdf-b992030760b0"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3508,7 +3508,7 @@
         "id": "nWFw3_F1euCE",
         "outputId": "3349f14d-c73f-4943-ea34-ec280b54b9df"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3537,7 +3537,7 @@
         "id": "qS4jSYXi3KQt",
         "outputId": "9457130a-3bab-4a16-cb45-068c71f658bb"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3566,7 +3566,7 @@
         "id": "5-qiPasG4jNO",
         "outputId": "67acc6f7-8fdc-4a61-bda0-8dcc29efa175"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3596,7 +3596,7 @@
         "id": "tGK5QIv95Qla",
         "outputId": "d9ab523c-e5c3-403c-8445-bd84b543f2d3"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3615,6 +3615,225 @@
           },
           "metadata": {},
           "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Quartis\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from scipy import stats\n",
+        "import math\n",
+        "\n",
+        "odd_size_data = [150,151,152,152,153,154,155,155,155]\n",
+        "\n",
+        "'''\n",
+        "#Way 1\n",
+        "\n",
+        "\n",
+        "#Q2 = media from array\n",
+        "np.median(odd_size_data) #153\n",
+        "#position of median\n",
+        "position_median = math.floor(len(odd_size_data) / 2) # 4, since arrays in python starting in 0, but actully is 5 the position\n",
+        "Q2 = position_median\n",
+        "\n",
+        "#Q1 left part of the data\n",
+        "sub_array_lef = odd_size_data[0:position_median]\n",
+        "Q1 = np.median(sub_array_lef) #151.5\n",
+        "\n",
+        "#Q3 right part of the data\n",
+        "sub_array_right = odd_size_data[position_median + 1:] # [154,155,155,155]\n",
+        "Q3 = np.median(sub_array_right) #155\n",
+        "'''\n",
+        "'''\n",
+        "#way 2\n",
+        "Q1 = np.quantile(odd_size_data, 0.25)\n",
+        "Q2 = np.quantile(odd_size_data, 0.5)\n",
+        "Q3 = np.quantile(odd_size_data, 0.75)\n",
+        "\n",
+        "Q1, Q2, Q3\n",
+        "'''\n",
+        "\n",
+        "'''\n",
+        "#Way 3\n",
+        "Q1 = stats.scoreatpercentile(odd_size_data, 25) \n",
+        "Q2 = stats.scoreatpercentile(odd_size_data, 50)\n",
+        "Q3 = stats.scoreatpercentile(odd_size_data, 75)\n",
+        "'''\n",
+        "\n",
+        "#Way 4\n",
+        "dataframe = pd.DataFrame(odd_size_data)\n",
+        "dataframe.quantile([0.25,0.5,0.75])\n",
+        "#Can use .describe() too\n",
+        "dataframe.describe()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 300
+        },
+        "id": "VkjHAlpI8avO",
+        "outputId": "0968f36e-6329-4a77-ef3a-103d8328ad02"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                0\n",
+              "count    9.000000\n",
+              "mean   153.000000\n",
+              "std      1.870829\n",
+              "min    150.000000\n",
+              "25%    152.000000\n",
+              "50%    153.000000\n",
+              "75%    155.000000\n",
+              "max    155.000000"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-82bb083c-e84a-4e74-8370-fcac5dba2517\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>9.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>153.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>1.870829</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>150.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>152.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>153.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>155.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>155.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-82bb083c-e84a-4e74-8370-fcac5dba2517')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-82bb083c-e84a-4e74-8370-fcac5dba2517 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-82bb083c-e84a-4e74-8370-fcac5dba2517');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
         }
       ]
     }
