--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPjaLr3ycBq3SCnuV4SAd/h",
+      "authorship_tag": "ABX9TyNzRFYTdOD8DIbyMRV14D01",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "bnD3AghhHMAC"
       },
@@ -3292,7 +3292,7 @@
           "height": 279
         },
         "id": "bM04XoMa4zHa",
-        "outputId": "3a062c78-beaa-442b-fbdf-b992030760b0"
+        "outputId": "bf8f1356-37df-4fa1-b0fa-97b65dbb68d0"
       },
       "execution_count": null,
       "outputs": [
@@ -3675,9 +3675,9 @@
           "height": 300
         },
         "id": "VkjHAlpI8avO",
-        "outputId": "0968f36e-6329-4a77-ef3a-103d8328ad02"
+        "outputId": "068750fe-69d3-4aed-d5fc-b51603277b1b"
       },
-      "execution_count": 19,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3695,7 +3695,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-82bb083c-e84a-4e74-8370-fcac5dba2517\">\n",
+              "  <div id=\"df-45d7cd21-3e23-4901-990b-e0a5db446806\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -3754,7 +3754,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-82bb083c-e84a-4e74-8370-fcac5dba2517')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-45d7cd21-3e23-4901-990b-e0a5db446806')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -3805,12 +3805,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-82bb083c-e84a-4e74-8370-fcac5dba2517 button.colab-df-convert');\n",
+              "          document.querySelector('#df-45d7cd21-3e23-4901-990b-e0a5db446806 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-82bb083c-e84a-4e74-8370-fcac5dba2517');\n",
+              "          const element = document.querySelector('#df-45d7cd21-3e23-4901-990b-e0a5db446806');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -3833,7 +3833,96 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#percentiles\n",
+        "\n",
+        "np.median(dataArray)#160\n",
+        "np.percentile(dataArray, 50)#160\n",
+        "np.percentile(dataArray, 10)#152"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rLHVbaGXN1OG",
+        "outputId": "c34205fb-9c4f-477d-8b8b-554967a15392"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "152.9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Variance\n",
+        "import numpy as np\n",
+        "from scipy import ndimage\n",
+        "\n",
+        "\n",
+        "odd_size_data = np.array([150,151,152,152,153,154,155,155,155])\n",
+        "'''\n",
+        "#Way 1\n",
+        "#Arithmetic mean\n",
+        "mean = odd_size_data.sum() / len(odd_size_data) # 153\n",
+        "\n",
+        "#Variance\n",
+        "Variance = abs(odd_size_data - mean) # 3., 2., 1., 1., 0., 1., 2., 2., 2.\n",
+        "Variance = Variance ** 2\n",
+        "sum_Variance = Variancee.sum()\n",
+        "\n",
+        "v = sum_Variance / len(odd_size_data)\n",
+        "\n",
+        "def get_Variance(dataset):\n",
+        "  mean = dataset.sum() / len(dataset)\n",
+        "  Variance = abs(Variance - mean)\n",
+        "  Variance_pow2 = Variance ** 2\n",
+        "  sum_Variance = Variance_pow2.sum()\n",
+        "  return sum_Variance / len(dataset)\n",
+        "\n",
+        "get_Variance(odd_size_data)\n",
+        "'''\n",
+        "'''\n",
+        "#way 2\n",
+        "np.var(odd_size_data)\n",
+        "'''\n",
+        "\n",
+        "#way 3\n",
+        "ndimage.variance(odd_size_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NEZxpcMxVe0p",
+        "outputId": "3d7eebed-80f0-436f-ac28-2ffd54ea2acf"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.111111111111111"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
         }
       ]
     }
