--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNzRFYTdOD8DIbyMRV14D01",
+      "authorship_tag": "ABX9TyPYkx3yJLDAkZkIXPgaKh5E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3890,7 +3890,7 @@
         "\n",
         "def get_Variance(dataset):\n",
         "  mean = dataset.sum() / len(dataset)\n",
-        "  Variance = abs(Variance - mean)\n",
+        "  Variance = abs(dataset - mean)\n",
         "  Variance_pow2 = Variance ** 2\n",
         "  sum_Variance = Variance_pow2.sum()\n",
         "  return sum_Variance / len(dataset)\n",
@@ -3910,9 +3910,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NEZxpcMxVe0p",
-        "outputId": "3d7eebed-80f0-436f-ac28-2ffd54ea2acf"
+        "outputId": "08d53932-4369-4b65-d28c-1c54547c7f86"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3922,7 +3922,65 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Standard deviation\n",
+        "import numpy as np\n",
+        "import math\n",
+        "\n",
+        "odd_size_data = np.array([150,151,152,152,153,154,155,155,155])\n",
+        "\n",
+        "'''\n",
+        "#Way 1\n",
+        "def get_Variance(dataset):\n",
+        "  mean = dataset.sum() / len(dataset)\n",
+        "  Variance = abs(dataset - mean)\n",
+        "  Variance_pow2 = Variance ** 2\n",
+        "  sum_Variance = Variance_pow2.sum()\n",
+        "  return sum_Variance / len(dataset)\n",
+        "\n",
+        "v = get_Variance(odd_size_data)\n",
+        "\n",
+        "#Standard deviation\n",
+        "dp = math.sqrt(v) # 1.7638342073763937\n",
+        "\n",
+        "def get_standard_deviation(dataset):\n",
+        "  mean = dataset.sum() / len(dataset)\n",
+        "  Variance = abs(dataset - mean)\n",
+        "  Variance_pow2 = Variance ** 2\n",
+        "  sum_Variance = Variance_pow2.sum()\n",
+        "  variance = sum_Variance / len(dataset)\n",
+        "  return math.sqrt(variance)\n",
+        "\n",
+        "get_standard_deviation(odd_size_data)\n",
+        "'''\n",
+        "\n",
+        "#Way 2\n",
+        "np.std(odd_size_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F6EWa2lLdA-u",
+        "outputId": "b760127c-5515-4fe6-9be4-a2ff633caad3"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.7638342073763937"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
         }
       ]
     }
