Coefficient of variation

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPYkx3yJLDAkZkIXPgaKh5E",
+      "authorship_tag": "ABX9TyMo0hTbChgZz10bLLaT0nnL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3981,6 +3981,52 @@
           },
           "metadata": {},
           "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Coefficient of variation\n",
+        "import numpy as np\n",
+        "import scipy\n",
+        "\n",
+        "odd_size_data = np.array([150,151,152,152,153,154,155,155,155])\n",
+        "\n",
+        "'''\n",
+        "#Way 1\n",
+        "def get_coefficient_variation(dataset):\n",
+        "  mean = dataset.sum() / len(dataset)\n",
+        "  Variance = abs(dataset - mean)\n",
+        "  Variance_pow2 = Variance ** 2\n",
+        "  sum_Variance = Variance_pow2.sum()\n",
+        "  variance = sum_Variance / len(dataset)\n",
+        "  stdv = math.sqrt(variance)\n",
+        "  return (stdv / mean) * 100\n",
+        "\n",
+        "get_coefficient_variation(odd_size_data)\n",
+        "'''\n",
+        "#way 2\n",
+        "stats.variation(odd_size_data) * 100"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q5k7UlXBgDkt",
+        "outputId": "9f7b7e40-fb1e-4037-da45-69820434c82a"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.1528328152786886"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
         }
       ]
     }
