--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMo0hTbChgZz10bLLaT0nnL",
+      "authorship_tag": "ABX9TyOn+HaN8+JuyqABl6BQXchj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4027,6 +4027,131 @@
           },
           "metadata": {},
           "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "dataset = pd.read_csv('credit_data.csv')\n",
+        "dataset.dropna(inplace=True)\n",
+        "\n",
+        "dataset.shape #1997, 5\n",
+        "\n",
+        "X = dataset.iloc[:, 1:4].values\n",
+        "y = dataset.iloc[:, 4].values\n",
+        "\n",
+        "result_naive_bayes = []\n",
+        "result_logistic = []\n",
+        "result_forest = []\n",
+        "\n",
+        "for i in range(30):\n",
+        "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size= 0.2, stratify = y, random_state = i)\n",
+        "\n",
+        "  naive_bayes = GaussianNB()\n",
+        "  naive_bayes.fit(X_train, y_train)\n",
+        "  result_naive_bayes.append(accuracy_score(y_test, naive_bayes.predict(X_test)))\n",
+        "\n",
+        "  logistic = LogisticRegression()\n",
+        "  logistic.fit(X_train, y_train)\n",
+        "  result_logistic.append(accuracy_score(y_test, logistic.predict(X_test)))\n",
+        "\n",
+        "  random_forest = RandomForestClassifier()\n",
+        "  random_forest.fit(X_train, y_train)\n",
+        "  result_forest.append(accuracy_score(y_test, random_forest.predict(X_test)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TGNDDC16uyCT",
+        "outputId": "ac28b5ac-7713-4ff0-a1db-efd2dd95a12f"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.925, 0.925, 0.9325, 0.925, 0.92, 0.905, 0.9175, 0.9175, 0.9125, 0.9325, 0.9225, 0.9125, 0.935, 0.9175, 0.925, 0.9175, 0.9275, 0.92, 0.9325, 0.92, 0.93, 0.905, 0.9175, 0.9325, 0.9425, 0.9375, 0.94, 0.92, 0.935, 0.925]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(result_naive_bayes)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iFmqQMRw0qoj",
+        "outputId": "718d208f-39b2-459b-9fcb-f8fa3e09f42a"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.925, 0.925, 0.9325, 0.925, 0.92, 0.905, 0.9175, 0.9175, 0.9125, 0.9325, 0.9225, 0.9125, 0.935, 0.9175, 0.925, 0.9175, 0.9275, 0.92, 0.9325, 0.92, 0.93, 0.905, 0.9175, 0.9325, 0.9425, 0.9375, 0.94, 0.92, 0.935, 0.925]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(result_logistic)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7uK-qxGe03SV",
+        "outputId": "a14b315d-b41e-44d1-c5a3-f8833aff4c15"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.9325, 0.91, 0.9125, 0.9225, 0.9075, 0.89, 0.91, 0.9075, 0.8775, 0.915, 0.9175, 0.9, 0.925, 0.9175, 0.9025, 0.9125, 0.9525, 0.91, 0.9225, 0.9075, 0.925, 0.905, 0.9075, 0.945, 0.9225, 0.9275, 0.9225, 0.9175, 0.91, 0.9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(result_forest)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nCOu3fHT08Kq",
+        "outputId": "65a13c37-dfc9-4b14-b4fd-68abaa2cfb54"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.97, 0.99, 0.9725, 0.9925, 0.98, 0.985, 0.985, 0.9825, 0.975, 0.99, 0.9825, 0.9825, 0.9725, 0.985, 0.98, 0.975, 0.9875, 0.9825, 0.99, 0.9825, 0.9825, 0.9775, 0.9875, 0.9875, 0.9875, 0.995, 0.9925, 0.9825, 0.9925, 0.99]\n"
+          ]
         }
       ]
     }
